--- a/main.css
+++ b/main.css
@@ -1,5 +1,3 @@
-/*Esta hoja de estilos pertenece a los archivos html con los idiomas alemán, inglés, español e italiano*/
-
 @import url('https://fonts.googleapis.com/css2?family=Julius+Sans+One&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@400;700&display=swap');
@@ -63,4 +61,76 @@ a {
 
 span {
   color: cyan;
+}
+
+@media screen and (min-width: 425px) {
+  .frase {
+    font-size: 160%;
+  }
+
+  ul {
+    margin-top: 335px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .frase {
+    font-size: 220%;
+  }
+
+  ul {
+    margin-top: 340px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .frase {
+    font-size: 190%;
+  }
+
+  nav li {
+    float: left;
+    width: 10%;
+  }
+
+  ul {
+    margin-top: 316px;
+  }
+
+  span,
+  a {
+    font-size: 130%
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .frase {
+    font-size: 190%;
+  }
+
+  .autor {
+    font-size: 150%;
+  }
+
+  nav li {
+    float: left;
+    width: 10%;
+  }
+
+  ul {
+    margin-top: 710px;
+  }
+
+  span,
+  a {
+    font-size: 130%
+  }
+
+  a:hover {
+    text-decoration: underline;
+  }
 }
